IOS 6 validate v2 protocol * Refactor ios 6 validataion code + Add http post request handler as v2 protocol
